--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -76,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:background="@android:color/holo_blue_light"
-        android:text="Signup"
+        android:text="Finish"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
